# aiga_connect

./: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml
aiga/: asgi.py  settings.py  urls.py  wsgi.py
announcements/: admin.py  apps.py  models.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_initial.py
attendance/: admin.py  apps.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_initial.py
dashboard/: apps.py  urls.py  views.py
gyms/: admin.py  apps.py  models.py  urls.py  views.py
gyms/migrations/: 0001_initial.py
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_initial.py
templates/: academy.html  base.html  index.html  main.html  news.html  profile.html  store.html  tournament.html
templates/admin/: admin.html
templates/attendance/: attendance.html
templates/components/: nav.html
templates/core/: index.html  main.html
templates/dashboard/: home.html  leaderboard.html  profile.html
templates/gyms/: academy.html  detail.html  list.html
templates/news/: news.html
templates/store/: store.html
templates/tournaments/: tournament.html
templates/users/: login.html  profile.html  profile_update.html  signup.html
tournaments/: admin.py  apps.py  models.py  urls.py  views.py
tournaments/migrations/: 0001_initial.py  0002_initial.py
trainings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
trainings/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+2 files in other folders)
