[project]
name = "aiga-connect"
version = "0.1.0"
description = "aiga-connect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
]
